Added file upload form w/ router and controllers for it

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,8 @@
             <h1>Hello, World!</h1>
         <% } %>
 
+        <button onclick="location.href='/upload-file';">Upload File</button>
+
         <button onclick="location.href='/log-in/log-out';">Log Out</button>
     </body>
 </html>
