Added ability to see contents of folders and add folders inside of other folders

--- a/views/createFolder.ejs
+++ b/views/createFolder.ejs
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <form action="/folder/create" method="post">
+        <form action="/folder/create/<%= path %>" method="post">
             <label for="folder">Folder Name:</label>
             <input type="text" name="folder" id="folder" required="required">
             <button type="submit">Add Folder</button>
