--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,11 @@
 
                 <% files.forEach((file) => { %>
                     <li>
-                        <button><%= file.name %></button>
+                        <% if (!file.isFile) { %>
+                            <button onclick="location.href='/folder/path/<%= file.name %>';"><%= file.name %></button>
+                        <% } else { %>
+                            <button><%= file.name %></button>
+                        <% } %>
                     </li>
                 <% }); %>
 
@@ -21,7 +25,7 @@
             
         <button onclick="location.href='/upload-file';">Upload File</button>
 
-        <button onclick="location.href='/folder/create';">Add Folder</button>
+        <button onclick="location.href='/folder/create/';">Add Folder</button>
 
         <button onclick="location.href='/log-in/log-out';">Log Out</button>
     </body>
