Added ability to upload files to any folder

--- a/views/folder.ejs
+++ b/views/folder.ejs
@@ -30,7 +30,7 @@
 
         <% } %>
 
-        <button onclick="location.href='/upload-file';">Upload File</button>
+        <button onclick="location.href='/upload-file/<%= path %>';">Upload File</button>
         
         <button onclick="location.href='/folder/create/<%= path %>';">Add Folder</button>
         
