--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
             </ul>
         <% } %>
             
-        <button onclick="location.href='/upload-file';">Upload File</button>
+        <button onclick="location.href='/upload-file/';">Upload File</button>
 
         <button onclick="location.href='/folder/create/';">Add Folder</button>
 
