--- a/views/fileUploadForm.ejs
+++ b/views/fileUploadForm.ejs
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <form action="/upload-file" method="post" enctype="multipart/form-data">
+        <form action="/upload-file/<%= path %>" method="post" enctype="multipart/form-data">
             <label for="userFile">Upload File:</label>
             <input type="file" name="userFile" id="userFile" />
 
