Added Delete and Rename button to all files

--- a/views/folder.ejs
+++ b/views/folder.ejs
@@ -23,6 +23,9 @@
                                 <%= file.name %>
                             </button>
                         <% } %>
+                        
+                        <button>Delete</button>
+                        <button>Rename</button>
                     </li>
                 <% }); %>
         
