--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,6 +17,9 @@
                         <% } else { %>
                             <button><%= file.name %></button>
                         <% } %>
+                        
+                        <button>Delete</button>
+                        <button>Rename</button>
                     </li>
                 <% }); %>
 
