--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,7 +19,7 @@
                         <% } %>
 
                         <button onclick="location.href='/folder/delete/<%= file.name %>';">Delete</button>
-                        <button>Rename</button>
+                        <button onclick="location.href='/folder/rename/<%= file.name %>';">Rename</button>
                     </li>
                 <% }); %>
 
