Changed some text

--- a/views/renameFolder.ejs
+++ b/views/renameFolder.ejs
@@ -1,9 +1,9 @@
 <html>
     <body>
         <form action="/folder/rename/<%= path %>" method="post">
-            <label for="folder">New Folder Name:</label>
+            <label for="folder">New File/Folder Name:</label>
             <input type="text" name="folder" id="folder" required="required">
-            <button type="submit">Add Folder</button>
+            <button type="submit">Rename File/Folder</button>
         </form>
     </body>
 </html>
